added separate player page
players connect to a different port to get their interface served.

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <meta name="SaxHero" content="onlyWebPro" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>Light Web</title>
+    <title>Saxophone Hero</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="libraries/p5.js"></script>
-    <!-- <script src="libraries/socket.io.js"></script> -->
+    <script src="libraries/socket.io.min.js"></script>
     <!-- <script src="libraries/p5.func.js"></script> -->
     <!-- <script src="libraries/Tone.js"></script> -->
     <script src="libraries/StartAudioContext.js"></script>
