--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,11 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script src="libraries/p5.js"></script>
     <script src="libraries/socket.io.min.js"></script>
+    <!-- <script src="libraries/p5.sound.js"></script> -->
     <!-- <script src="libraries/p5.func.js"></script> -->
-    <!-- <script src="libraries/Tone.js"></script> -->
+    <script src="libraries/Tone.js"></script>
     <script src="libraries/StartAudioContext.js"></script>
-
+    <script src="WelcomeScreen.js"></script>
     <script src="SaxHero.js"></script>
     <style type="text/css">
         body {
@@ -34,6 +35,13 @@
 
         canvas:focus {
             outline: 0;
+        }
+
+        button{
+            font-size:xx-large;
+            margin:4px 2px;
+            text-align: center;
+            align-items: center;
         }
 
         .fs {
