more timeline tests

--- a/Timeline-Dev/index.html
+++ b/Timeline-Dev/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
     </main>
-    <script type="text/javascript" src="Soprano1.js"></script>
-    <script src="timelinetest.js"></script>
+    <script src="soprano.js"></script>
+    <script src="timeline-test-062024.js"></script>
   </body>
 </html>
