lots of changes
- added score display function for players
- streamlined the team tracking function (object with all teams rather than individual arrays)
- added player HUD for the audience so they can see their team and level

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,8 @@
 
         button {
             font-size: xx-large;
-            margin: 4px 2px;
+            margin: 0px;
+            padding: 1px;
             text-align: center;
             align-items: center;
         }
