--- a/saxScores/index.html
+++ b/saxScores/index.html
@@ -14,7 +14,7 @@
     <script src="libraries/p5.js"></script>
     <script src="libraries/socket.io.min.js"></script>
     <!-- <script src="libraries/p5.func.js"></script> -->
-    <!-- <script src="libraries/Tone.js"></script> -->
+    <script src="libraries/Tone.js"></script>
     <!-- <script src="libraries/StartAudioContext.js"></script> -->
 
     <script src="SaxHeroPlayer.js"></script>
@@ -48,6 +48,10 @@
 
         #exit {
             display: none;
+        }
+        select{
+            width: 100%;
+            font-size: 50px;
         }
     </style>
 
