basic functionality of tracker
- draw hash marks based on MIDI score
- level tracking
- starting latency calculation section

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
     <script src="libraries/Tone.js"></script>
     <script src="libraries/StartAudioContext.js"></script>
     <script src="WelcomeScreen.js"></script>
+    <script src="score.js"></script>
     <script src="SaxHero.js"></script>
+    <script src="ThumbTracker.js"></script>
     <script>
         //keep the page from scrolling around when you move your fingers around
         document.addEventListener('touchmove', function (event) {
@@ -45,7 +47,7 @@
         }
 
         button {
-            font-size: xx-large;
+            font-size: 10vh;
             margin: 0px;
             padding: 1px;
             text-align: center;
