--- a/saxScores/index.html
+++ b/saxScores/index.html
@@ -50,8 +50,8 @@
             display: none;
         }
         select{
-            width: 100%;
-            font-size: 50px;
+            width: 50%;
+            font-size: 3dvh;
         }
     </style>
 
