more timing test changes

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Saxophone Hero</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
     <script src="libraries/p5.js"></script>
     <script src="libraries/scenemanager.js"></script>
     <script src="libraries/socket.io.min.js"></script>
