added local storage for reconnecting players
Users might refresh/disconnect after the game begins. Using localstorage, their previously chosen team is reassigned when the page is refreshed. Need to make sure that they get properly removed/added from the user array with Max.

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport"
         content="width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
     <meta name="SaxHero" content="onlyWebPro" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Saxophone Hero</title>
-    <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
     <script src="libraries/p5.js"></script>
     <script src="libraries/scenemanager.js"></script>
     <script src="libraries/socket.io.min.js"></script>
@@ -27,6 +26,9 @@
         document.addEventListener('touchmove', function (event) {
             event.preventDefault();
         }, { passive: false });
+    </script>
+    <script>
+
     </script>
     <style type="text/css">
         body {
