--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
     </script>
     <style type="text/css">
         body {
-            margin: 0;
-            padding: 0;
+            margin: 0 !important;
+            padding: 0 !important;
             width: 100%;
             height: 100%;
             background-color: black;
