--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="libraries/StartAudioContext.js"></script>
     <script src="HUD.js"></script>
     <script src="score.js"></script>
+    <script src="transport.js"></script>
     <script src="SaxHero.js"></script>
     <script src="ThumbTracker.js"></script>
     <script>
